# Spiking-Neural-Network-Encoder

./: CMakeLists.txt
src/: Neuron.cpp  Neuron.h  Phase.cpp  Phase.h  Population.cpp  Population.h  Rate.cpp  Rate.h  SNNE.cpp  SNNE.h  main.cpp
